# sdk-nrf

./: west.yml
applications/asset_tracker/: prj-3_Mobile.conf  prj.conf  prj_nrf9160_pca10090ns_csl.conf  prj_nrf9160_pca20035ns.conf  prj_thingy91_nrf9160ns.conf
applications/asset_tracker_v2/: prj.conf
applications/esb_demo/: readme.txt
applications/esb_demo-mod/: readme.txt
applications/esb_prx_rpmsg/: CMakeLists.txt
applications/hid-usb-mouse/: CMakeLists.txt  prj.conf  sample.yaml
applications/hid-usb-mouse/remote/: prj.conf
applications/hid-usb-mouse/src/: main - Copy.c  main.c
applications/nRF91_cross_dfu/: CMakeLists.txt  README.md  nrf9160dk_nrf9160ns.overlay  prj.conf
applications/nRF91_cross_dfu/src/: app_cmd.c  app_cmd.h  app_flash.c  app_flash.h  app_flash_cmd.c  app_flash_cmd.h  app_uart.c  app_uart.h  button.c  button.h  http_client.c  http_client.h  led.c  led.h  main.c
applications/nRF91_cross_dfu/src/serial_dfu/: dfu_drv.c  dfu_drv.h  dfu_file.c  dfu_file.h  dfu_host.c  dfu_host.h  serial_dfu.c  serial_dfu.h  slip.c  slip.h
applications/nRF91_cross_dfu/webserver/: README.md
applications/nRF91_cross_dfu/webserver/config files/: nrf91_server  supervisord.conf
applications/nRF91_cross_dfu/webserver/www/: nrf91_server.py
applications/nRF91_cross_dfu/webserver/www/templates/: index.html  upload.html  uploaded_files.html
applications/nrf5340_audio/: overlay-gateway.conf  prj.conf
applications/nrf_desktop/: CMakeLists.txt  README.rst
applications/prx_max_speed/: prj.conf
applications/serial_lte_modem/: prj.conf
doc/nrf/: samples.rst  ug_gzll.rst  ug_gzp.rst  ug_nrf52.rst
drivers/: CMakeLists.txt
drivers/lte_link_control/: lte_lc.c
drivers/npmx/: CMakeLists.txt  npmx_config.h  npmx_driver.c  npmx_driver.h  npmx_glue.h  npmx_trigger.c  npmx_trigger.h
include/: fast_esb.h  gzp.h  gzp_config.h  inv_esb.h
lib/location/: method_gnss.c
samples.ww/central_smp_nus/: pm_static.yml  pm_static1.yml  prj.conf  zcbor_decode.c
samples.ww/peripheral_lbs/: prj.conf
samples/inv_esb/: readme.txt
samples/qspi/: Kconfig  README.rst  prj.conf
samples/unicorn/transmitter_2Mbps/: CMakeLists.txt  main.c
samples/unicorn/transmitter_2Mbps/src/: main.c
scripts/: quarantine_zephyr.yaml
scripts/ci/: tags.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/esb/: esb.c
subsys/esb_multiack/: esb.c
subsys/fast_esb/: CMakeLists.txt  Kconfig  fast_esb.c
subsys/gazell/: CMakeLists.txt  Kconfig  gzp.c  gzp_device.c  gzp_host.c  nrf_gzll_glue.c
(+819 files in other folders)
